--- a/library-backend/package.json
+++ b/library-backend/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/MikkoLipsanen/Fullstack2019_OSa8#readme",
   "dependencies": {
     "apollo-server": "^2.7.0",
-    "graphql": "^14.4.2"
+    "graphql": "^14.4.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
