--- a/library-backend/package.json
+++ b/library-backend/package.json
@@ -20,7 +20,10 @@
   "homepage": "https://github.com/MikkoLipsanen/Fullstack2019_OSa8#readme",
   "dependencies": {
     "apollo-server": "^2.7.0",
+    "dotenv": "^8.0.0",
     "graphql": "^14.4.2",
+    "mongoose": "^5.6.6",
+    "mongoose-unique-validator": "^2.0.3",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
