--- a/library-backend/package.json
+++ b/library-backend/package.json
@@ -22,6 +22,7 @@
     "apollo-server": "^2.7.0",
     "dotenv": "^8.0.0",
     "graphql": "^14.4.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.6",
     "mongoose-unique-validator": "^2.0.3",
     "uuid": "^3.3.2"
