--- a/library-frontend/package.json
+++ b/library-frontend/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.4.3",
+    "apollo-link": "^1.2.12",
+    "apollo-link-context": "^1.0.18",
     "graphql": "^14.3.1",
     "react": "^16.8.6",
     "react-apollo": "^3.0.0-beta.2",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-select": "^3.0.4"
   },
